--- a/tareas/templates/bitacoras.html
+++ b/tareas/templates/bitacoras.html
@@ -2,5 +2,5 @@
 {% block content %}
 <h2>Gestión de Bitácoras</h2>
 <p>Vista exclusiva para líderes de cuadrilla.</p>
-<a href="{% url 'logout' %}">Cerrar sesión</a>
+<a href="{% url 'usuarios:logout' %}">Cerrar sesión</a>
 {% endblock %}
