--- a/tareas/templates/asignaciones.html
+++ b/tareas/templates/asignaciones.html
@@ -2,5 +2,5 @@
 {% block content %}
 <h2>Asignaciones de Trabajo</h2>
 <p>Vista disponible para trabajadores.</p>
-<a href="{% url 'logout' %}">Cerrar sesión</a>
+<a href="{% url 'usuarios:logout' %}">Cerrar sesión</a>
 {% endblock %}
